grammar.js
        source_file: $ => seq(
            field('docstring', optional($.string)), 
            repeat($.use), 
            repeat($.entity)),
        cap: $ => choice('iso', 'trn', 'ref', 'val', 'box', 'tag'),
        nominal_type: $ => prec.right(seq(
            field('name', sep1('.', $.identifier)),
            optional(field('typeargs', $.typeargs)),
            optional(field('cap', choice($.cap, $.gencap))),
            optional(field('modifier', choice($.ephemeral, $.aliased)))
        )),
        _inner_type: $ => seq(
            choice(
                $["this"], 
                $.cap, 
                $.nominal_type, 
                $._grouped_type, 
                $.lambda_type
            ),
            optional(field('viewpoint', seq('->', $._inner_type)))
        ),
        type: $ => $._inner_type,

        // expr AS type - a partial cast
        consume: $ => prec(
            PREC.consume,
            seq('consume', optional($.cap), $._term)
        ),
        // jumps
        "return": $ =>              prec.left(seq('return', optional($.block))),
        "break": $ =>               prec.left(seq('break', optional($.block))),
        "continue": $ =>            prec.left(seq('continue', optional($.block))),
        "error": $ =>               prec.left(seq('error', optional($.block))),
        "compile_intrinsic": $ =>   prec.left(seq('compile_intrinsic', optional($.block))),
        "compile_error": $ =>       prec.left(seq('compile_error', optional($.block))),
        _jump: $ => choice(
            $["return"],
            $["break"],
            $["continue"],
            $.error,
            $.compile_intrinsic,
            $.compile_error
        ),
        _block_exprs: $ => seq(
              $._block_expr,
              repeat(
                  choice(
                      seq(';', $._block_expr),
                      $._block_expr_new
                  )
              )
          ),
        block: $ => choice(
            $._block_exprs,
            seq($._block_exprs, $._jump),
            $._jump
        ),
        _term: $ => prec(PREC.term, choice(
            $.unary_op,
            $.identifier, // reference
            $["this"],
            $._literal,
            $.array,
            $.object,
            $.lambda,
            $.barelambda,
            $.ffi_call,
            $["location"],
            $["if"],
            $.ifdef,
            $.iftype,
            $.match,
            $["while"],
            $["repeat"],
            $["for"],
            $.with,
            $.try_block,
            $.recover,
            $.consume,
            //$._pattern,
            $.local,
            $.binop,
            $.asop,
            $.field_access,
            $.partial_application,
            $.chain,
            $.call,
            $.tuple,
            $.grouped,
            $.term_with_typeargs
            // TODO: const_expr (not yet supported in ponyc)
        )),
        identifier: $ => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_']/))),
        param: $ => choice(
            '...', 
            seq(
                field('name', $.identifier), 
                ':', 
                field('type', $.type), 
                optional(seq('=', field('default', $._term)))
            )
        ),
        params: $ => commaSep1($.param),
        // TODO
        typeargs: $ => seq(alias($.lsquare, '['), commaSep1($.type), ']'), // TODO: const and literal typeargs
        partial: $ => '?',
        _use_name: $ => seq(field('name', $.identifier), '='),
        use: $ => seq(
                'use',
                optional(field('name', $._use_name)),
                field('specifier', choice($.string, $.use_ffi)),
                optional(seq('if', field('condition', $._term)))
        ),
        constructor: $ => seq(
            'new',
            $._method_common
        ),
        _method_common: $ => seq(
            optional($.annotations),
            optional(
                choice(
                    field('receiver_cap', $.cap),
                    '@'
                )
            ),
            field('name', $.identifier),
            optional(field('typeparams', $.typeparams)),
            alias(choice($.lparen, $.lparen_new), '('),
            optional(field('params', $.params)), 
            ')',
            optional(seq(':', field('return_type', $.type))),
            optional($.partial),
            // docstring for functions without body
            optional(field('docstring', $.string)),
            optional(seq('=>', field('body', $.block)))
        ),
        methods: $ => repeat1(choice($.constructor, $.method, $.behavior)),
        entity_type: $ => choice('type', 'interface', 'trait', 'primitive', 'struct', 'class', 'actor'),
        // can't be empty so we have all combinations of fields and methods here
        entity: $ => seq(
            field('entity_type', $.entity_type),
            optional($.annotations),
            optional(token('@')),
            optional(field('default_cap', $.cap)),
            field('name', $.identifier),
            optional(field('typeparams', $.typeparams)),
            optional(seq('is', field('provides', $.type))),
            optional(field('docstring', $.string)),
            optional(field('members', $.members))
        )
    }
});

function commaSep(rule) {
  return optional(commaSep1(rule))
}

function commaSep1(rule) {
  return sep1(',', rule)
}

function sep1(delimiter, rule) {
  return seq(rule, repeat(seq(delimiter, rule)))
}
function sep2(delimiter, rule) {
  return seq(rule, repeat1(seq(delimiter, rule)))
}
