test/corpus/entity_simple.txt
======
Simple
======

actor Main
 new create(env: Env) => None

---

(source_file
    (entity
        entity_type: (entity_type)
        name: (identifier)
        methods: (methods
            (constructor
              name: (identifier)
              params: (params
                (param
                  name: (identifier)
                  type: (type
                    (nominal_type name: (identifier)))))
              body: (block (identifier))
            )
        )
    )
)
